# Django

./: .gitignore  README.md  csv_to_json.py  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py
ads/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0002_selection.py
ads/views/: ads.py  categories.py  selections.py  users.py
data/: ads.csv
homework/: settings.py  urls.py
